deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
  name: helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - image: dkrizic/helloworld:1.4
        imagePullPolicy: IfNotPresent
        name: helloworld
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            memory: 500Mi
            cpu: 500m
          requests:
            memory: 500Mi
            cpu: 500m
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /database
            name: database
      volumes:
        - name: config
          configMap:
            name: config
        - name: database
          secret:
            secretName: database
