deploy/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: helloworld
  name: helloworld
spec:
  serviceName: helloworld
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - image: dkrizic/helloworld:1.4
        imagePullPolicy: IfNotPresent
        name: helloworld
        command:
          - "catalina.sh"
          - "run"
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            memory: 500Mi
            cpu: 500m
          requests:
            memory: 500Mi
            cpu: 500m
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /database
            name: database
          - mountPath: /usr/local/tomcat/conf/server.xml
            name: config
            subPath: server.xml
          - name: helloworld
            mountPath: /data
      volumes:
        - name: config
          configMap:
            name: config
        - name: database
          secret:
            secretName: database
        - name: source
          persistentVolumeClaim:
              claimName: source
  volumeClaimTemplates:
  - metadata:
      name: helloworld
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: default
      resources:
        requests:
          storage: 10Gi
