deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
spec:
  ingressClassName: nginx
  rules:
  - host: "helloworld.prodyna.wtf"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: helloworld
            port:
              number: 80
